--- a/index.html
+++ b/index.html
@@ -1,58 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Prediction Sea</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              orbitron: ['Orbitron', 'sans-serif'],
-              rajdhani: ['Rajdhani', 'sans-serif'],
-            },
-            colors: {
-              cosmos: {
-                dark: '#050510', 
-                panel: 'rgba(5, 23, 42, 0.85)',
-                cyan: '#00ffff',
-                purple: '#bc13fe',
-                green: '#0aff68',
-                red: '#ff2a2a',
-              }
-            }
-          }
-        }
-      }
-    </script>
-    <style>
-      body { margin: 0; overflow: hidden; background-color: #050510; color: white; }
-    </style>
-    
-    <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@18.2.0",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@8.15.12?external=react,three,react-dom",
-    "@react-three/drei": "https://esm.sh/@react-three/drei@9.99.0?external=react,three,react-dom,@react-three/fiber",
-    "three": "https://esm.sh/three@0.160.0",
-    "uuid": "https://esm.sh/uuid@9.0.1",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
-  <link rel="stylesheet" href="/index.css">
+
+<head>
+  <meta charset="utf-8" />
+
+  <link rel="icon" href="/logo.png" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Tactical Hover Warfare Game" />
+
+  <title>HOVERWARS | Tactical Warfare</title>
 </head>
-  <body>
-    <div id="root"></div>
-    
-    <script type="module" src="/src/index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
+
 </html>
